package de.sswis.view;

import com.intellij.uiDesigner.core.GridConstraints;
import com.intellij.uiDesigner.core.GridLayoutManager;
import com.intellij.uiDesigner.core.Spacer;

import de.sswis.view.model.VMConfiguration;
import de.sswis.view.model.VMResult;

import javax.swing.*;
import java.awt.*;
import java.awt.event.ActionListener;
import java.util.List;


/**
 *in Hauptfenster der Benutzeroberfläche.
 *
 * @author Sophie Bräuniger
 */
public class MainView implements AbstractMainView {


    private List<VMConfiguration> configurations;


    private JButton simulationenStartenButton;
    private JButton ergebnisseAnzeigenButton;
    private JTree waehlenSieEineKonfigurationTree;
    private JButton ergebisseSpeichernButton;




    @Override
    public void addConfiguration(VMConfiguration configuration) {}

    @Override
    public void removeConfiguration(String configurationName) {}

    @Override
    public void  addResult(String NameConfiguration, VMResult result){}

    @Override
    public void setSimulationFinished (String NameConfiguration) {}

    @Override
    public VMConfiguration getSelected() { return null; }

    @Override
    public void addStartButtonActionlistener(ActionListener listener) {

    }

    @Override
    public void addStopActionListener(ActionListener listener) {

    }

    @Override
    public void addShowButtonActionlistener(ActionListener listener) {

    }

    @Override
    public void addSaveButtonActionlistener(ActionListener listener) {

    }

    @Override
    public void addNewGameMenuActionListener(ActionListener listener) {

    }

    @Override
    public void addNewCombiStrategyMenuActionListener(ActionListener listener) {

    }

    @Override
    public void addNewStrategyMenuActionListener(ActionListener listener) {

    }

    @Override
    public void addNewInitMenuActionListener(ActionListener listener) {

    }

    @Override
    public void addNewConfigMenuActionListener(ActionListener listener) {

    }

    @Override
    public void addManageGameMenuActionListener(ActionListener listener) {

    }

    @Override
    public void addManageCombiStrategyMenuActionListener(ActionListener listener) {

    }

    @Override
    public void addManageStrategyMenuActionListener(ActionListener listener) {

    }

    @Override
    public void addManageInitMenuActionListener(ActionListener listener) {

    }

    @Override
    public void addManageConfigMenuActionListener(ActionListener listener) {

    }

    @Override
    public void update() {}

    @Override
    public void show() {

    }

    @Override
    public void close() {

    }


    private void createUIComponents() {
        // TODO: place custom component creation code here


    }

    {
// GUI initializer generated by IntelliJ IDEA GUI Designer
// >>> IMPORTANT!! <<<
// DO NOT EDIT OR ADD ANY CODE HERE!
        $$$setupUI$$$();
    }

    /**
     * Method generated by IntelliJ IDEA GUI Designer
     * >>> IMPORTANT!! <<<
     * DO NOT edit this method OR call it in your code!
     *
     * @noinspection ALL
     */
    private void $$$setupUI$$$() {
        createUIComponents();
        final JPanel panel1 = new JPanel();
        panel1.setLayout(new GridLayoutManager(3, 1, new Insets(20, 20, 20, 20), -1, -1));
        final JPanel panel2 = new JPanel();
        panel2.setLayout(new GridLayoutManager(2, 1, new Insets(0, 0, 0, 0), -1, -1));
        panel1.add(panel2, new GridConstraints(0, 0, 1, 1, GridConstraints.ANCHOR_CENTER, GridConstraints.FILL_BOTH, GridConstraints.SIZEPOLICY_CAN_SHRINK | GridConstraints.SIZEPOLICY_CAN_GROW, GridConstraints.SIZEPOLICY_CAN_SHRINK | GridConstraints.SIZEPOLICY_CAN_GROW, null, null, null, 0, false));
        final JLabel label1 = new JLabel();
        Font label1Font = this.$$$getFont$$$(null, -1, 22, label1.getFont());
        if (label1Font != null) label1.setFont(label1Font);
        label1.setText("SSWIS Simuliert WIederholte Spiele");
        panel2.add(label1, new GridConstraints(0, 0, 1, 1, GridConstraints.ANCHOR_WEST, GridConstraints.FILL_NONE, GridConstraints.SIZEPOLICY_FIXED, GridConstraints.SIZEPOLICY_FIXED, null, null, null, 0, false));
        final Spacer spacer1 = new Spacer();
        panel2.add(spacer1, new GridConstraints(1, 0, 1, 1, GridConstraints.ANCHOR_CENTER, GridConstraints.FILL_VERTICAL, 1, GridConstraints.SIZEPOLICY_WANT_GROW, null, null, null, 0, false));
        final JPanel panel3 = new JPanel();
        panel3.setLayout(new GridLayoutManager(9, 3, new Insets(0, 0, 0, 0), -1, -1));
        panel1.add(panel3, new GridConstraints(2, 0, 1, 1, GridConstraints.ANCHOR_CENTER, GridConstraints.FILL_BOTH, GridConstraints.SIZEPOLICY_CAN_SHRINK | GridConstraints.SIZEPOLICY_CAN_GROW, GridConstraints.SIZEPOLICY_CAN_SHRINK | GridConstraints.SIZEPOLICY_CAN_GROW, null, null, null, 0, false));
        final JScrollPane scrollPane1 = new JScrollPane();
        scrollPane1.setHorizontalScrollBarPolicy(31);
        scrollPane1.setVerticalScrollBarPolicy(22);
        panel3.add(scrollPane1, new GridConstraints(1, 0, 6, 3, GridConstraints.ANCHOR_CENTER, GridConstraints.FILL_BOTH, GridConstraints.SIZEPOLICY_CAN_SHRINK | GridConstraints.SIZEPOLICY_WANT_GROW, GridConstraints.SIZEPOLICY_CAN_SHRINK | GridConstraints.SIZEPOLICY_WANT_GROW, null, null, null, 0, false));
        waehlenSieEineKonfigurationTree.setEditable(true);
        waehlenSieEineKonfigurationTree.setLargeModel(true);
        waehlenSieEineKonfigurationTree.setRootVisible(true);
        waehlenSieEineKonfigurationTree.setShowsRootHandles(true);
        waehlenSieEineKonfigurationTree.putClientProperty("JTree.lineStyle", "");
        scrollPane1.setViewportView(waehlenSieEineKonfigurationTree);
        final JLabel label2 = new JLabel();
        label2.setText("Wählen Sie eine Konfiguration");
        panel3.add(label2, new GridConstraints(0, 0, 1, 3, GridConstraints.ANCHOR_WEST, GridConstraints.FILL_NONE, GridConstraints.SIZEPOLICY_FIXED, GridConstraints.SIZEPOLICY_FIXED, null, null, null, 0, false));
        final Spacer spacer2 = new Spacer();
        panel3.add(spacer2, new GridConstraints(8, 0, 1, 3, GridConstraints.ANCHOR_CENTER, GridConstraints.FILL_VERTICAL, 1, GridConstraints.SIZEPOLICY_WANT_GROW, null, null, null, 0, false));
        simulationenStartenButton = new JButton();
        simulationenStartenButton.setText("Simulationen starten");
        panel3.add(simulationenStartenButton, new GridConstraints(7, 0, 1, 1, GridConstraints.ANCHOR_SOUTH, GridConstraints.FILL_NONE, GridConstraints.SIZEPOLICY_CAN_SHRINK | GridConstraints.SIZEPOLICY_CAN_GROW, GridConstraints.SIZEPOLICY_FIXED, null, null, null, 0, false));
        ergebnisseAnzeigenButton = new JButton();
        ergebnisseAnzeigenButton.setText("Ergebnisse anzeigen");
        panel3.add(ergebnisseAnzeigenButton, new GridConstraints(7, 2, 1, 1, GridConstraints.ANCHOR_SOUTH, GridConstraints.FILL_NONE, GridConstraints.SIZEPOLICY_CAN_SHRINK | GridConstraints.SIZEPOLICY_CAN_GROW, GridConstraints.SIZEPOLICY_FIXED, null, null, null, 0, false));
        ergebisseSpeichernButton = new JButton();
        ergebisseSpeichernButton.setText("Ergebisse speichern");
        panel3.add(ergebisseSpeichernButton, new GridConstraints(7, 1, 1, 1, GridConstraints.ANCHOR_CENTER, GridConstraints.FILL_NONE, GridConstraints.SIZEPOLICY_CAN_SHRINK | GridConstraints.SIZEPOLICY_CAN_GROW, GridConstraints.SIZEPOLICY_FIXED, null, null, null, 0, false));
        final JSeparator separator1 = new JSeparator();
        panel1.add(separator1, new GridConstraints(1, 0, 1, 1, GridConstraints.ANCHOR_CENTER, GridConstraints.FILL_BOTH, GridConstraints.SIZEPOLICY_WANT_GROW, GridConstraints.SIZEPOLICY_WANT_GROW, null, null, null, 0, false));
        label2.setLabelFor(scrollPane1);
    }

    /**
     * @noinspection ALL
     */
    private Font $$$getFont$$$(String fontName, int style, int size, Font currentFont) {
        if (currentFont == null) return null;
        String resultName;
        if (fontName == null) {
            resultName = currentFont.getName();
        } else {
            Font testFont = new Font(fontName, Font.PLAIN, 10);
            if (testFont.canDisplay('a') && testFont.canDisplay('1')) {
                resultName = fontName;
            } else {
                resultName = currentFont.getName();
            }
        }
        return new Font(resultName, style >= 0 ? style : currentFont.getStyle(), size >= 0 ? size : currentFont.getSize());
    }

}
